# boozarr

./: README.md  pyproject.toml
docs/plans/: 2026-06-19-boozarr-epub-editor.md  2026-06-19-boozarr-implementation.md  2026-06-20-compress-option.md  2026-06-20-report-formatting.md  2026-06-22-text-indent.md  2026-06-30-compat-processor.md  2026-06-30-enhanced-chapter-detection.md
docs/specs/: 2026-06-19-epub-editor-design.md  2026-06-20-compress-option-design.md  2026-06-20-report-formatting-design.md  2026-06-22-text-indent-design.md  2026-06-30-compat-processor-design.md  2026-06-30-enhanced-chapter-detection-design.md
src/boozarr/: cli.py  db.py  epub.py  logger.py  pipeline.py  report.py  utils.py
src/boozarr/processors/: __init__.py  base.py  borders.py  chapters.py  cleanup.py  compat.py  compression.py  css_normalise.py  links.py  metadata.py
tests/: test_boozarr_rename.py  test_cli.py  test_db.py  test_epub.py  test_pipeline.py  test_processor_base.py  test_report.py  test_utils.py
tests/test_processors/: test_borders.py  test_chapters.py  test_cleanup.py  test_compat.py  test_compression.py  test_css_normalise.py  test_links.py  test_metadata.py
